<resources>
    <string name="app_name">Quizy</string>
    <string name="lang">عربي</string>
    <string name="lang_suffix">ar</string>
    <string name="initializing">initializing…</string>
    <string name="imageContentDescription">image</string>
    <string name="quiz_title">Quiz Title</string>
    <string name="view_quiz">View Quiz</string>
    <string name="quiz_description">Quiz Description</string>
    <string name="difficulty">Difficulty</string>
    <string name="total_questions">Total Questions</string>
    <string name="last_score">Your Last Score</string>
    <string name="na">NA</string>
    <string name="startQuiz">Start Quiz</string>
    <string name="loading">Loading…</string>
    <string name="loading_quiz">Loading Quiz…</string>
    <string name="fetching_data">Fetching Data</string>
    <string name="option_button">Option Button</string>
    <string name="verifying_answer">Verifying Answer</string>
    <string name="next_question">Next Question</string>
    <string name="questions">Questions</string>
    <string name="results">Results</string>
    <string name="correct_answers">Correct Answers</string>
    <string name="wrong_answers">Wrong Answers</string>
    <string name="questions_missed">Questions Missed</string>
    <string name="go_to_home">Go to Home</string>
    <string name="checkUserAccount">Checking User Account…</string>
    <string name="createAccount">Creating Account…</string>
    <string name="accountCreated">Account Created…</string>
    <string name="loggedIn">Logged in…</string>
    <string name="errorCreateAccount">Error With Creating account…</string>
    <string name="quiz_data_loaded_title">Quiz Data Loaded</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="wrong_answer">Wrong Answer\nCorrect Answer: %s</string>
    <string name="questionMissed">Question Missed\nCorrect Answer: %s</string>
    <string name="finish_button_text">View Result</string>
    <string name="calculate_result_loading">Calculating result</string>
    <string name="writer_name">By %s</string>
    <string name="error">unexpected Error Occurred</string>
    <string name="poot_connection">Poor Network connection</string>
    <string name="exit_alert_title">Confirmation</string>
    <string name="exit_alert_message">Are you want to confirm exit Quiz?</string>
    <string name="exit_alert_btn1">Exist</string>
    <string name="exit_alert_btn2">Cancel</string>
    <string name="create_new_quiz">Create new quiz</string>
    <string name="create_quiz">Create Quiz</string>
    <string name="quiz_name">Quiz Name</string>
    <string name="create_writer_name">Writer Name</string>
    <string name="questions_number">Questions Number</string>
    <string name="level">Level</string>
    <string name="continue1">Continue</string>
    <string name="select_difficulty_level">Select Difficulty Level</string>
    <string name="attach_image">Attach Image</string>
    <string name="percentage">Percentage: \</string>
    <string name="error_upload_image">Error with uploading image</string>
    <string name="select_questions_number">Select Questions Number</string>
    <string name="filed_required">This field is required</string>
    <string name="questionTitle">Question Number %s</string>
    <string name="right_answer">Right Answer</string>
    <string name="wrong_answer_1">Wrong Answer 1</string>
    <string name="wrong_answer_2">Wrong Answer 2</string>
    <string name="time_in_seconds">Time in seconds</string>
    <string name="wrong_question_header">Question Number %s\nWrong Question</string>
    <string name="wrong_question_right_answer">Question Number %s\nRight Answer is empty</string>
    <string name="wrong_question_wrong1">Question Number %s\nFirst wrong Answer is empty</string>
    <string name="wrong_question_wrong2">Question Number %s\nSecond wrong Answer is empty</string>
    <string name="wrong_question_wrong_time">Question Number %s\nWrong time</string>
    <string name="submit">Submit</string>
    <string name="create_questions">Create Questions</string>
    <string name="question_header">Question header</string>
    <string name="uploading">Uploading...</string>
    <string name="uploading_quiz">Uploading Quiz..</string>
    <string name="ok">Ok</string>
    <string name="alert_quiz_uploaded_title">Uploaded</string>
    <string name="alert_quiz_uploaded_message">Quiz uploaded successfully.</string>
    <string name="splashActivity_ask4network_title">Alert</string>
    <string name="splashActivity_ask4network_message">The app has not been connected to the network before, you have to connect to the internet and reopen the app.</string>
    <string name="splashActivity_unExpectedError_title">Sorry</string>
    <string name="splashActivity_unExpectedError_message">An unexpected error has occurred. Please try again later.</string>
    <string name="splash_poorConnectionTip">poor network connection</string>
    <string name="splashActivity_updateDialogContent">update to the latest version to enjoy better services.</string>
    <string name="splashActivity_updateDialogTitle">There is new Version</string>
    <string name="splashActivity_update">update</string>
    <string name="splashActivity_Exit">Exit</string>
    <string name="splashActivity_discard">discard</string>
    <string name="check_app_version">checking app version…</string>
    <string name="answer_interpretation">Answer Interpretation</string>
    <string name="uplaoding_image">Uploading Image…</string>
</resources>
