<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ResultFragment"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/results_title"
        android:text="@string/results"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp"
        android:textColor="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:textSize="36sp"
        android:fontFamily="@font/crimson_text"
        android:layout_marginHorizontal="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/results_title"
        android:layout_marginTop="64dp">
        <ProgressBar
            android:id="@+id/results_progress"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:progress="75"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:progressDrawable="@drawable/circular_progress"
            />
    </RelativeLayout>



    <TextView
        android:id="@+id/results_precent"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:fontFamily="@font/work_sans"
        android:textSize="26sp"
        android:layout_below="@+id/results_title"
        android:layout_marginTop="64dp"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:text="100%"/>

    <TextView
        android:id="@+id/results_correct"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/correct_answers"
        android:textColor="@color/colorLightText"
        android:textSize="16sp"
        android:fontFamily="@font/work_sans"
        android:layout_below="@+id/results_precent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"/>

    <TextView
        android:id="@+id/results_wrong"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/wrong_answers"
        android:textColor="@color/colorLightText"
        android:textSize="16sp"
        android:fontFamily="@font/work_sans"
        android:layout_below="@+id/results_correct"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/results_missed"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/questions_missed"
        android:textColor="@color/colorLightText"
        android:textSize="16sp"
        android:fontFamily="@font/work_sans"
        android:layout_below="@+id/results_wrong"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/results_correct_text"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignParentEnd="true"
        android:text="@string/na"
        android:textColor="@color/colorLightText"
        android:textSize="16sp"
        android:fontFamily="@font/work_sans"
        android:layout_below="@+id/results_precent"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="64dp"/>

    <TextView
        android:id="@+id/results_wrong_text"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignParentEnd="true"
        android:text="@string/na"
        android:textColor="@color/colorLightText"
        android:textSize="16sp"
        android:fontFamily="@font/work_sans"
        android:layout_below="@+id/results_correct_text"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/results_missed_text"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignParentEnd="true"
        android:text="@string/na"
        android:textColor="@color/colorLightText"
        android:textSize="16sp"
        android:fontFamily="@font/work_sans"
        android:layout_below="@+id/results_wrong_text"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/results_home_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="@drawable/outline_btn_bg"
        android:text="@string/go_to_home"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="@font/work_sans"
        android:padding="12dp"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="32dp"
        android:textSize="16sp"
        android:textAllCaps="false"/>
</RelativeLayout>