<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorDark"
    app:cardCornerRadius="16dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/questionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:textSize="24sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/work_sans" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question_header"
            android:textColorHint="@color/colorLightText"
            android:layout_margin="5dp"
            app:errorEnabled="true"
            app:boxStrokeColor="@color/colorPrimary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEditTextQuestion"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutRightAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/right_answer"
            android:textColorHint="@color/colorLightText"
            android:layout_margin="5dp"
            app:errorEnabled="true"
            app:boxStrokeColor="@color/colorPrimary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEditTextRightAnswer"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutWrong1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wrong_answer_1"
            android:textColorHint="@color/colorLightText"
            android:layout_margin="5dp"
            app:errorEnabled="true"
            app:boxStrokeColor="@color/colorPrimary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEditTextWrong1"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutWrong2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wrong_answer_2"
            android:textColorHint="@color/colorLightText"
            android:layout_margin="5dp"
            app:errorEnabled="true"
            app:boxStrokeColor="@color/colorPrimary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEditTextWrong2"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/time_in_seconds"
            android:textColorHint="@color/colorLightText"
            android:layout_margin="5dp"
            app:errorEnabled="true"
            app:boxStrokeColor="@color/colorPrimary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEditTextTime"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutAnswerInterpretation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer_interpretation"
            android:textColorHint="@color/colorLightText"
            android:layout_margin="5dp"
            app:errorEnabled="true"
            app:boxStrokeColor="@color/colorPrimary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEditTextAnswerInterpretation"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>